@@ -30,6 +30,7 @@
     <File name="./src/Base/PortInfoList.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Abilities.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/FileSystem.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/TestGphoto2Sharp.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
